--- a/src/app/module/product/component/product/product.component.html
+++ b/src/app/module/product/component/product/product.component.html
@@ -84,264 +84,151 @@
   </div>
 </div>
 
-<!-- Modal form  -->
-
 <div class="modal fade" tabindex="-1" data-bs-backdrop="static" id="modalForm">
-  <div class="modal-dialog modal-dialog-centered modal-lg">
+  <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">Producto</h5>
+        <h5 class="modal-title">Detalles del Producto</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
+        <form [formGroup]="form" (ngSubmit)="onSubmit()" class="form-horizontal">
+          <div class="mb-3">
+            <label for="gtin" class="form-label">GTIN <span class="text-danger">*</span></label>
+            <input type="text" class="form-control" formControlName="gtin" id="gtin" placeholder="Código GTIN del producto...">
+            <div *ngIf="form.controls['gtin'].errors && submitted" class="invalid-feedback">
+              Favor de ingresar un código GTIN válido
+            </div>
+          </div>
 
-          <!-- Product form  -->
+          <div class="mb-3">
+            <label for="product" class="form-label">Producto <span class="text-danger">*</span></label>
+            <input type="text" class="form-control" formControlName="product" id="product" placeholder="Nombre del producto...">
+            <div *ngIf="form.controls['product'].errors && submitted" class="invalid-feedback">
+              Favor de ingresar un nombre de producto válido
+            </div>
+          </div>
+
+          <div class="mb-3">
+            <label for="price" class="form-label">Precio <span class="text-danger">*</span></label>
+            <input type="text" class="form-control" formControlName="price" id="price" placeholder="Precio del producto...">
+            <div *ngIf="form.controls['price'].errors && submitted" class="invalid-feedback">
+              Favor de ingresar un precio válido
+            </div>
+          </div>
+
+          <div class="mb-3">
+            <label for="stock" class="form-label">Cantidad de productos <span class="text-danger">*</span></label>
+            <input type="text" class="form-control" formControlName="stock" id="stock" placeholder="Número de stock del producto...">
+            <div *ngIf="form.controls['stock'].errors && submitted" class="invalid-feedback">
+              Favor de ingresar un número de stock válido
+            </div>
+          </div>
+
+          <select class="form-select" *ngIf="categories && categories.length > 0" formControlName="category_id" id="category_id">
+            <option value="" hidden>Selecciona una categoría...</option>
+            <ng-container *ngFor="let category of categories">
+              <option [value]="category.category_id">{{ category.category }}</option>
+            </ng-container>
+          </select>
+          <div *ngIf="!categories || categories.length === 0">Cargando categorías...</div>
           
-          <form [formGroup]="form" (ngSubmit)="onSubmit()">
 
-          
-              <div class="row">
+          <div class="mb-3">
+            <label for="description" class="form-label">Descripción <span class="text-danger">*</span></label>
+            <textarea rows="3" class="form-control" formControlName="description" id="description" placeholder="Descripción del producto..."></textarea>
+            <div *ngIf="form.controls['description'].errors && submitted" class="invalid-feedback">
+              Favor de ingresar una descripción válida
+            </div>
+          </div>
 
-                  <!-- gtin  -->
-  
-                  <div class="col-md-6">
-                      <div class="mb-3">
-                        <label for="gtin">GTIN <span class="color-red">*</span> </label>
-                        <input type="text" class="form-control" formControlName="gtin" id="gtin" placeholder="Código GTIN del producto..." 
-                            [ngClass]="{'is-invalid': form.controls['gtin'].errors && submitted}" >
-                        @if (form.controls['gtin'].errors && submitted) {
-                          <small class="input-error-message">Favor de ingresar un código gtin válido</small>
-                        }
-                      </div>
-                  </div>
-        
-                  <!-- product  -->
-        
-                  <div class="col-md-6"> 
-                      <div class="mb-3">
-                        <label for="product">Producto <span class="color-red">*</span> </label>
-                        <input type="text" class="form-control" formControlName="product" id="product" placeholder="Nombre del producto..." 
-                            [ngClass]="{'is-invalid': form.controls['product'].errors && submitted}" >
-                        @if (form.controls['product'].errors && submitted) {
-                          <small class="input-error-message">Favor de ingresar un nombre de producto válido</small>
-                        }
-                      </div>
-                  </div>
-        
-                  <!-- price  -->
-        
-                  <div class="col-md-6"> 
-                      <div class="mb-3">
-                        <label for="price">Precio <span class="color-red">*</span> </label>
-                        <input type="text" class="form-control" formControlName="price" id="price" placeholder="Precio del producto..." 
-                            [ngClass]="{'is-invalid': form.controls['price'].errors && submitted}" >
-                        @if (form.controls['price'].errors && submitted) {
-                          <small class="input-error-message">Favor de ingresar un precio válido</small>
-                        }
-                      </div>
-                  </div>
-        
-                  <!-- stock  -->
-        
-                  <div class="col-md-6"> 
-                      <div class="mb-3">
-                        <label for="stock">Cantidad de productos <span class="color-red">*</span> </label>
-                        <input type="text" class="form-control" formControlName="stock" id="stock" placeholder="Número de stock del producto..." 
-                            [ngClass]="{'is-invalid': form.controls['stock'].errors && submitted}" >
-                        @if (form.controls['stock'].errors && submitted) {
-                          <small class="input-error-message">Favor de ingresar un número de stock válido</small>
-                        }
-                      </div>
-                  </div>  
-        
-                  <!-- category_id  -->
-        
-                  <div class="col-md-6"> 
-                      <div class="mb-3">
-                        <label for="category_id">Categoría <span class="color-red">*</span> </label>
-                        <select class="form-select" formControlName="category_id" id="category_id"
-                            [ngClass]="{'is-invalid': form.controls['category_id'].errors && submitted}">
-                          <option [ngValue]=null hidden>Selecciona una categoría...</option>
-                          @for(category of categories; track category) {
-                            <option [ngValue]="category.category_id">{{ category.category }}</option>
-                          }
-                        </select>
-                        @if (form.controls['category_id'].errors && submitted) {
-                          <small class="input-error-message">Favor de seleccionar válida</small>
-                        }
-                      </div>
-                  </div>
-        
-                  <!-- description  -->
-        
-                  <div class="mb-3">
-                    <label for="description">Descripción <span class="color-red">*</span> </label>
-                    <textarea rows="2" class="form-control" formControlName="description" id="description" placeholder="Descripción del producto..." 
-                      [ngClass]="{'is-invalid': form.controls['description'].errors && submitted}" >
-                    </textarea>
-                    @if (form.controls['description'].errors && submitted) {
-                      <small class="input-error-message">Favor de ingresar una descripción válida</small>
-                    }
-                  </div>
-              </div>
-    
-              <!-- button  -->
-              
-              <div class="form-button">
-                <button type="submit" class="btn btn-primary btn-new">Guardar</button>
-              </div>
-    
-            </form>
-
+          <div class="text-end">
+            <button type="submit" class="btn btn-primary">Guardar</button>
+          </div>
+        </form>
       </div>
     </div>
   </div>
 </div>
 
-<!-- Product modal  -->
-
+<!-- Product modal -->
 <div class="modal fade" tabindex="-1" data-bs-backdrop="static" id="productModal">
-<div class="modal-dialog modal-dialog-centered modal-lg">
-  <div class="modal-content">
-    <div class="modal-header">
-      <h5 class="modal-title">Producto</h5>
-      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-    </div>
-    <div class="modal-body">
-
-        <!-- Product form  -->
-
-        <div class="row">
-  
-            <!-- product  -->
-  
-            <div class="col-md-6"> 
-              <div class="mb-3">
-                <label class="product-label" for="product">Producto </label>
-                <p>{{ product.product }}</p>
-              </div>
-            </div>
-
-            <!-- gtin  -->
-
-            <div class="col-md-6">
-              <div class="mb-3">
-                <label class="product-label" for="gtin">GTIN </label>
-                <p>{{ product.gtin }}</p>
-              </div>
-            </div>
-  
-            <!-- price  -->
-  
-            <div class="col-md-4"> 
-              <div class="mb-3">
-                <label class="product-label" for="price">Precio </label>
-                <p>{{ product.price | currency: 'USD'}}</p>
-              </div>
-            </div>
-  
-            <!-- stock  -->
-  
-            <div class="col-md-4"> 
-              <div class="mb-3">
-                <label class="product-label" for="stock">Cantidad en stock </label>
-                <p>{{ product.stock }}</p>
-              </div>
-            </div>  
-  
-            <!-- category_id  -->
-  
-            <div class="col-md-4"> 
-              <div class="mb-3">
-                <label class="product-label" for="category_id">Categoría </label>
-                <p>{{ product.category_id }}</p>
-              </div>
-            </div>
-  
-            <!-- description  -->
-  
-            <div class="mb-3">
-              <label class="product-label" for="description">Descripción </label>
-              <p>{{ product.description }}</p>
-            </div>
-        </div>
-
-        <!-- buttons  -->
-        
-        <div class="row">
-
-          <!-- data  -->
-
-          <!-- <div class="col-md-6">
-            <div class="form-button">
-              <button type="button" class="btn btn-primary btn-product-detail" (click)="updateProduct(this.product.gtin)">
-                <i class="ph ph-note-pencil"></i>
-                Editar
-              </button>
-            </div>
-          </div> -->
-
-          <!-- images  -->
-
+  <div class="modal-dialog modal-dialog-centered modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Detalles del Producto</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <div class="row g-3">  <!-- Updated class for spacing -->
+          <!-- Product details displayed in a more compact form -->
           <div class="col-md-6">
-            <div class="form-button">
-              <button type="button" class="btn btn-primary btn-product-images" (click)="showImagesModal(this.product.product_id, this.product.product)">
-                <i class="ph ph-image"></i>
-                Ver imágenes
-              </button>
-            </div>
+            <label class="form-label"><strong>Producto:</strong></label>
+            <p>{{ product.product }}</p>
           </div>
-
+          <div class="col-md-6">
+            <label class="form-label"><strong>GTIN:</strong></label>
+            <p>{{ product.gtin }}</p>
+          </div>
+          <div class="col-md-4">
+            <label class="form-label"><strong>Precio:</strong></label>
+            <p>{{ product.price | currency: 'USD' }}</p>
+          </div>
+          <div class="col-md-4">
+            <label class="form-label"><strong>Cantidad en Stock:</strong></label>
+            <p>{{ product.stock }}</p>
+          </div>
+          <div class="col-md-4">
+            <label class="form-label"><strong>Categoría:</strong></label>
+            <p>{{ product.category_id }}</p>
+          </div>
+          <div class="col-12">
+            <label class="form-label"><strong>Descripción:</strong></label>
+            <p>{{ product.description }}</p>
+          </div>
         </div>
-
+        <div class="d-flex justify-content-end mt-4">  <!-- Flexbox for alignment -->
+          <!-- Button for viewing images -->
+          <button type="button" class="btn btn-primary" (click)="showImagesModal(this.product.product_id, this.product.product)">
+            <i class="ph ph-image"></i> Ver imágenes
+          </button>
+        </div>
+      </div>
     </div>
   </div>
 </div>
-</div>
 
-<!-- Images modal  -->
 
 <div class="modal fade" tabindex="-1" data-bs-backdrop="static" id="imagesModal">
-<div class="modal-dialog modal-dialog-centered modal-xl">
-  <div class="modal-content">
-    <div class="modal-header">
-      <h5 class="modal-title">{{ productNameImages }}</h5>
-      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-    </div>
-    <div class="modal-body">
-
-        <div class="card-body-images">
-
-            <div class="row">
-              <div class="new-image">
-                <label for="uploadImage" class="cursor-pointer btn btn-primary btn-new btn-new-image">
-                  <i class="ph ph-plus-circle"></i>
-                  <input type="file" (change)="fileChangeHandler($event)" id="uploadImage" style="display:none">
-                  Agregar imagen
-                </label>
+  <div class="modal-dialog modal-dialog-centered modal-xl">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">{{ productNameImages }}</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <div class="upload-area text-center mb-4">
+          <label for="uploadImage" class="btn btn-primary">
+            <i class="ph ph-plus-circle"></i> Agregar imagen
+            <input type="file" (change)="fileChangeHandler($event)" id="uploadImage" hidden>
+          </label>
+        </div>
+        
+        <div class="row g-3">
+          @for (image of images; track $index) {
+            <div class="col-md-3">
+              <div class="card">
+                <img src="{{ image.image }}" class="card-img-top" alt="Image Description">
+                <div class="card-body text-center">
+                  <button type="button" class="btn btn-danger" (click)="deleteProductImage(image)">
+                    <i class="ph ph-trash"></i> Eliminar
+                  </button>
+                </div>
               </div>
             </div>
-            
-            <div class="row">
-                @for (image of images; track $index) {
-                    <div class="col-md-3">
-                        <div class="card card-image">
-                            <div class="card-body">
-                                <img src="{{ image.image }}" class="card-img-top" alt="...">
-                            </div>
-                            <div class="card-footer text-center">
-                                <button type="button" class="btn btn-danger btn-delete" (click)="deleteProductImage(image)">
-                                    <i class="ph ph-trash"></i>
-                                    Eliminar
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-                }
-            </div>
+          }
         </div>
-
+      </div>
     </div>
   </div>
-</div>
 </div>
