--- a/src/app/module/layout/app-layout/navbar2/navbar2.component.html
+++ b/src/app/module/layout/app-layout/navbar2/navbar2.component.html
@@ -36,7 +36,7 @@
               <div class="dropdown-menu nav-dropdown-menu">
                 <a class="dropdown-item nav-dropdown-item" routerLink="/categoria">Categorías</a>
                 <a class="dropdown-item nav-dropdown-item" routerLink="/product">Productos</a>
-                <a class="dropdown-item nav-dropdown-item" routerLink="/facturas">Invoices</a>
+                <a class="dropdown-item nav-dropdown-item" routerLink="/facturas">Facturas</a>
               </div>
             </li>
           }
